[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/bg.jpg" type="Texture" id=1]
[ext_resource path="res://themes/SelectedPrimaryButton.tres" type="StyleBox" id=2]
[ext_resource path="res://themes/UnSelectedPrimaryButton.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/back_icon.png" type="Texture" id=4]
[ext_resource path="res://ChooseLevel.gd" type="Script" id=5]
[ext_resource path="res://assets/Unwavering Heart.mp3" type="AudioStream" id=6]

[node name="ChooseLevel" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="BackButton" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 27.0
margin_bottom = 30.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
icon = ExtResource( 4 )
expand_icon = true

[node name="levels" type="VBoxContainer" parent="."]
margin_left = 125.0
margin_top = 60.0
margin_right = 192.0
margin_bottom = 125.0

[node name="EasyButton" type="Button" parent="levels"]
margin_right = 67.0
margin_bottom = 20.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "Easy"

[node name="Medium" type="Button" parent="levels"]
margin_top = 24.0
margin_right = 67.0
margin_bottom = 44.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "Medium"

[node name="HardButton" type="Button" parent="levels"]
margin_top = 48.0
margin_right = 67.0
margin_bottom = 68.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "Hard"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="levels/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="levels/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="levels/HardButton" to="." method="_on_HardButton_pressed"]
